# EnergyAgent

./: .flake8  .gitignore  .gitmodules  README.md  dependencies.py  docker-compose-dev.yaml  docker-compose.yaml  internet_check_restart.sh  main.py  mbus-test.py  my-power-base.yaml  occ_script.py  prepare_energy_agent.sh  provision.py  provision_atecc608.py  pyproject.toml  requirements.txt  schema.py  signData.py  sonar-project.properties  test_occ.py
.github/workflows/: CI.yml
app/: dependencies.py  main.py  main_typer.py  schemas.py
app/RddlInteraction/: api_queries.py  cid_tool.py  planetmint_interaction.py  rddl_client.py  rddl_network_config.py  utils.py
app/SmdConfig/: find_smd.py
app/controller/: machine.py  thing.py  time_series_data.py
app/database/: machine.py  schema.py  time_series_data.py
app/db/: __init__.py  activity_store.py  cid_store.py  smd_entry_store.py  tx_store.py
app/dblayer/: machine.py  tables.py  thing.py  time_series_data.py
app/energy_agent/: cerbogx.py  data_buffer.py  energy_agent.py  energy_decrypter.py  mbus_reader.py  shellypro3em.py  smart_meter_reader.py  smartfox.py
app/energy_meter_interaction/: energy_agent.py  energy_decrypter.py  energy_decrypter_test.py  energy_fetcher.py  energy_meter_data.py  pop_agent.py
app/helper/: enums.py
app/helpers/: api_helper.py  config_helper.py  logs.py  models.py  osc_message_sender.py  smart_meter_config.py  smd_entry_helper.py  topic_config.py
app/logic/: fetch_time_series_data.py  time_series_data.py
app/mock_scripts/: generate_time_series_data.py
app/model/: measurements.py
app/models/: machine.py  time_series_data.py
app/routers/: __init__.py  cid_resolver.py  configuration.py  energy_agent_logs.py  energy_agent_manager.py  energy_agent_thread.py  logging.py  machine.py  manage_smd.py  rddl_network.py  smd_entry.py  templates.py  thing.py  time_series_data.py  trust_wallet_interaction.py  tx_resolver.py  wifi_manager.py
app/services/: energy_agent_manager.py  mqtt_reporter.py  mqttbroadcast.py  scheduler.py  smart_meter_manager.py
app/templates/: Activities.html  CIDResolver.html  CidData.html  ClaimRewards.html  CreateAccount.html  CreateMnemonic.html  EnergyAgent.html  EnergyAgentLogs.html  EnergyAgentStats.html  LocalCidResolver.html  MqttConfig.html  NavBar.html  RddlNetwork.html  RecoverMnemonic.html  Reporting.html  SmartMeterConfig.html  SmdCidTable.html  SmdEntries.html  TopicSubscription.html  TransactionTable.html  TrustWallet.html  WifiConfig.html  WifiManager.html  index.html  layout.html
database/: machine.py  pg_handler.py  schema.py  time_series_data.py
docker/: DockerFile  DockerFile_Pip  DockerFile_Pip_backup  DockerFile_Typer  DockerFile_test  Dockerfile
logic/: fetch_time_series_data.py
models/: data.py  machine.py  time_series_data.py
routers/: __init__.py  data.py  machine.py  time_series_data.py
smart_meter_tests/: chunks-2.logs  legacy.py
smart_meter_tests/obis/: test.py  test2.py
smart_meter_tests/st/: energy_decrypter.py  mbus-test.py  mbus_reader.py  requirements.txt
smart_meter_tests/test_scripts/: energy_decrypter.py  mbus-test.py.ws  test-dec.py  test-parse_obis.py  test_crc.py  (+15 more)
templates/: MqttConfig.html  ResolveCid.html  SmartMeterConfig.html  TopicSubscription.html  index.html
tests/: cerbo_gx_test.py  config_helper_test.py  data_buffer_test.py  energy_agent_test.py  energy_decrypter_test.py  landis_gyr_e450_test.py  mbus_batch_processing_test.py  mearurement_test.py  measurement_test.py  rddl_interaction_test.py  shellypro3em_test.py  smart_fox_test.py
(+76 files in other folders)
