[tool.poetry]
name = "rddl-energy-agent"
version = "0.1.0"
description = ""
authors = ["Cybnon <stefan.weber93@googlemail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pycryptodome = "^3.20"
pydantic = "^2.7.0"
gurux-dlms = "^1.0.150"
lxml = "^5.2.2"
cryptography = "^42.0.5"
paho-mqtt = "^2.0.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
setuptools = "^70.0.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
ipfs-cid = "^1.0.0"
osc4py3 = "^1.0.8"
ecdsa = "^0.19.0"
ripe = "^0.0.4"
bitcoinaddress = "^0.1.5"
ripemd-hash = "^1.0.1"
starkbank-ecdsa = "^2.2.0"
protobuf = "^5.26.1"
asn1crypto = "^1.5.1"
gmqtt = "^0.6.16"
requests = "^2.32.2"
scapy = "^2.5.0"
netifaces = "^0.11.0"
pyopenssl = "^24.1.0"
asn1 = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.6"
black = "24.4.0"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
force-exclude = '''
/(
| amino
| cosmos
| cosmos_proto
| gogoproto
| google
| planetmintgo
| tendermint
)/
'''