[tool.poetry]
name = "rddl-energy-agent"
version = "0.3.1"
description = ""
authors = ["Cybnon <stefan.weber93@googlemail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pycryptodome = "^3.21.0"
pydantic = "^2.9.2"
gurux-dlms = "^1.0.164"
lxml = "^5.3.0"
cryptography = "^43.0.3"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
setuptools = "^75.4.0"
jinja2 = "3.1.6"
ipfs-cid = "^1.0.0"
osc4py3 = "^1.0.8"
ecdsa = "^0.19.0"
ripe = "^0.0.4"
bitcoinaddress = "^0.1.5"
ripemd-hash = "^1.0.1"
starkbank-ecdsa = "^2.2.0"
protobuf = "^5.26.1"
asn1crypto = "^1.5.1"
gmqtt = "^0.6.16"
requests = "^2.32.3"
scapy = "^2.6.1"
netifaces = "^0.11.0"
pyopenssl = "^24.2.1"
asn1 = "^2.7.1"
pymodbus = "^3.7.4"
pymeterbus = "^0.8.4"
apscheduler = "^3.11.0"
aiohttp = "^3.11.11"
paho-mqtt = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.5.1"
black = "25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
force-exclude = '''
/(
| amino
| cosmos
| cosmos_proto
| gogoproto
| google
| planetmintgo
| tendermint
)/
'''